# mini-reflect

./: CMakeLists.txt  CMakePresets.json  README.md  root-setup.cmake
code/: CMakeLists.txt  mini-reflect-impl.hpp  mini-reflect.cpp  mini-reflect.hpp
example/: CMakeLists.txt  serialize.cpp
test/: CMakeLists.txt  test.cpp
